--- a/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
@@ -777,6 +777,7 @@
             Fill: =RGBA(0, 0, 0, 0)
             Height: =40
             Required: =false
+            Visible: =false
             Width: =640
             X: =0
             Y: =10
@@ -816,6 +817,7 @@
             Height: =50
             Required: =false
             Update: =If(IsBlank(ThisItem.ID),Max(Listaproducao,IDEspelho)+1,ThisItem.ID)
+            Visible: =false
             Width: =640
             X: =0
             Y: =11
